--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
 </head>
 <body>
 <h1>Traffic PYPX</h1>
-<p></p>
+<p>This website holds our creative component and bibliography.<br>
+<a href="#bib">click here to go the the bibliography</a></p>
 <iframe width="1000" height="500" src="https://www.youtube.com/embed/M858f_VKXrE"></iframe>
+<ul id="bib">
+ <li>Mental Health In The News: Traffic and Congestion Stress. www.youtube.com,<br> https://www.youtube.com/watch?v=3O-FKKNOZoc. Accessed 16 Mar. 2023.</li>
+ <li>The Unseen Consequences of a Car Accident - Mental Trauma. www.youtube.com,<br> https://www.youtube.com/watch?v=v2n0vjcc07Q. Accessed 29 Mar. 2023 </li>
+ <li> Ganesh, Lalithashree. “Can Everyday Traffic Affect Our Mental Health?” White Swan Foundation,<br> 16 Jan. 2019,
+https://www.whiteswanfoundation.org/mental-health-matters/understanding-mental-health/can-everyday-traffic-affect-our-mental-health.</li>
+ <li>“Traffic Congestion Around Schools.” ASU Center for Problem-Oriented Policing, 1 Jan. 2007,<br> https://popcenter.asu.edu/content/traffic-congestion-around-schools-0.
+</li>
+ <li>The Causes of Traffic Congestion in Cities and Their Solutions.<br> https://www.linkedin.com/pulse/causes-traffic-congestion-cities-solutions-florian-petit. Accessed 12 Apr. 2023.
+</li>
+ <li>“Effect of Road Construction Projects on Travel Time Reliability.” Work Zone Safety Information Clearinghouse,<br> https://workzonesafety.org/publication/effect-of-road-construction-projects-on-travel-time-reliability/. Accessed 12 Apr. 2023.
+</li>
+  <li>“Why Does Traffic Happen?” Wawanesa Insurance, 27 Nov. 2018, https://www.wawanesa.com/us/blog/why-does-traffic-happen.
+</li>
+  <li>Carey Harold.interview.Conducted by Jackson.13,Apr.2023</li>
+  <li>C.Makambo.Interview.Conducted by Junior.12,Apr 2023
+</li>
+<ul>  
 </body>
 </html>
