--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
  margin-top:80px;
  margin-bottom:80px;
  }
- #main{margin-left:15px;}
+ #main{margin-left:15px;
+  background-color:rgb(211, 211, 211);
+ }
 </style>
 </head>
 <body>
