--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
  margin-bottom:80px;
  }
  #main{margin-left:15px;
-  background-color:rgb(211, 211, 211);
  }
+ body{background-color:rgb(211, 211, 211);}
 </style>
 </head>
 <body>
